plugins { id 'fabric-loom' version '1.11.8'; id 'java-library' }
group = 'com.cappleapple.animatedinventory'
version = mod_version
base.archivesName = "animatedinventory-fabric-${minecraft_version}"
java { toolchain.languageVersion = JavaLanguageVersion.of(17); withSourcesJar() }
repositories { mavenCentral() }
dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
    implementation include('io.github.llamalad7:mixinextras-fabric:0.5.0')
    annotationProcessor 'io.github.llamalad7:mixinextras-fabric:0.5.0'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
loom { runs { client { runDir 'run-client' }; server { runDir 'run-server'; programArg '--nogui' } } }
tasks.named('test', Test) { useJUnitPlatform() }
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
processResources { inputs.property 'version', project.version; filesMatching('fabric.mod.json') { expand(version: project.version) } }
jar { from('LICENSE') }

sourceSets {
    validation {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}
if (project.hasProperty('clientValidation') || project.hasProperty('serverValidation')) {
    loom.mods {
        animatedinventory { sourceSet sourceSets.main }
        animatedinventory_validation { sourceSet sourceSets.validation }
    }
}
if (project.hasProperty('clientValidation')) {
    loom.runs.client { runDir 'run-validation' }
    tasks.named('runClient') {
        dependsOn tasks.named('validationClasses')
        classpath += sourceSets.validation.output
        doFirst {
            if (!classpath.files.contains(file('build/resources/validation')) || !file('build/resources/validation/fabric.mod.json').exists()) throw new GradleException('Hidden validation mod is missing from the client classpath.')
            def directory = file('run-validation'); directory.mkdirs()
            file('run-validation/options.txt').text = 'onboardAccessibility:false\ntutorialStep:none\nsoundCategory_master:0.0\npauseOnLostFocus:false\nfullscreen:false\nmaxFps:30\n'
            file('run-validation/validation.txt').delete()
        }
        doLast {
            def report = file('run-validation/validation.txt')
            if (!report.exists() || !report.text.contains('PASS complete')) throw new GradleException('Client smoke validation failed; inspect run-validation logs.')
        }
    }
}

if (project.hasProperty('serverValidation')) {
    loom.runs.server { runDir 'run-validation-server' }
    tasks.named('runServer') {
        dependsOn tasks.named('validationClasses')
        classpath += sourceSets.validation.output
        doFirst {
            file('run-validation-server').mkdirs()
            file('run-validation-server/eula.txt').text = 'eula=true\n'
            file('run-validation-server/server.properties').text = 'online-mode=false\nserver-port=0\nview-distance=2\nsimulation-distance=2\nmax-tick-time=-1\n'
            file('run-validation-server/validation.txt').delete()
        }
        doLast {
            def report = file('run-validation-server/validation.txt')
            if (!report.exists() || !report.text.contains('PASS complete')) throw new GradleException('Dedicated-server validation failed; inspect run-validation-server logs.')
        }
    }
}

// Loom shares downloaded assets across projects; transient lock files are not task outputs.
tasks.configureEach { if (name == 'downloadAssets') doNotTrackState('The shared asset cache contains transient locks from concurrent Minecraft builds.') }

tasks.withType(JavaExec).configureEach { javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(17) } }
